nuevas ids(solo faltan funcionalidades)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -181,17 +181,17 @@
   <div class="content">
     <div class="left-side">
       <h1>Get</h1>
-      <div style="display: flex;height: 47px;"><p>ID:</p><input type="text"></div>
-      <div style="display: flex;height: 47px;"><p>uuid:</p></div>
-      <div style="display: flex;height: 47px;"><p>collegeNumber:</p></div>
-      <div style="display: flex;height: 47px;"><p>name:</p></div>
-      <div style="display: flex;height: 47px;"><p>surname1:</p></div>
-      <div style="display: flex;height: 47px;"><p>surname2:</p></div>
-      <div style="display: flex;height: 47px;"><p>integrationCodes:</p></div>
-      <div style="display: flex;height: 47px;"><p>mufaceSupport:</p></div>
-      <div style="display: flex;height: 47px;"><p>status:</p></div>
-      <div style="display: flex;height: 47px;"><p>userStatus:</p></div>
-      <button class="left_button">Obtener datos del cliente</button>
+      <div style="display: flex;height: 47px;"><p>ID:</p><span id="id"></span></div>
+      <div style="display: flex;height: 47px;"><p>uuid:</p><span id="uuid"></span></div>
+      <div style="display: flex;height: 47px;"><p>collegeNumber:</p><span id="collegeNumber"></span></div>
+      <div style="display: flex;height: 47px;"><p>name:</p><span id="name"></span></div>
+      <div style="display: flex;height: 47px;"><p>surname1:</p><span id="surname1"></span></div>
+      <div style="display: flex;height: 47px;"><p>surname2:</p><span id="surname2"></span></div>
+      <div style="display: flex;height: 47px;"><p>integrationCodes:</p><span id="integrationCodes"></span></div>
+      <div style="display: flex;height: 47px;"><p>mufaceSupport:</p><span id="mufaceSupport"></span></div>
+      <div style="display: flex;height: 47px;"><p>status:</p><span id="status"></span></div>
+      <div style="display: flex;height: 47px;"><p>userStatus:</p><span id="userStatus"></span></div>
+      <button class="left_button" id="get-button">Obtener datos del cliente</button>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
@@ -206,11 +206,11 @@
       <div style="display: flex;"><p>mufaceSupport:</p><input type="text"></div>
       <div style="display: flex;"><p>status:</p><input type="text"></div>
       <div style="display: flex;"><p>userStatus:</p><input type="text"></div>
-      <button class="right_button"> Enviar datos del cliente</button>
+      <button class="right_button">Enviar datos del cliente</button>
     </div>
   </div>
 </main>
-
+  
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
